deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konflux-app
  namespace: idankatz-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konflux-app
  template:
    metadata:
      labels:
        app: konflux-app
    spec:
      containers:
      - name: web
        image: image-registry.openshift-image-registry.svc:5000/idankatz-dev/konflux-lab:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: konflux-service
  namespace: idankatz-dev
spec:
  selector:
    app: konflux-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: konflux-route
  namespace: idankatz-dev
spec:
  to:
    kind: Service
    name: konflux-service
  port:
    targetPort: 5000
